# mars

./: .gitignore  CLAUDE.md  Makefile  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: assignments.py  audit.py  comments.py  dashboard.py  health.py  insights.py  lookups.py  materials.py  notifications.py  rbac.py  reviews.py  users.py  utils.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: assignment.py  audit.py  comment.py  db_models.py  lookup.py  material.py  notification.py  rbac.py  review.py  upload.py  user.py
backend/app/services/: notification_service.py  review_service.py  workflow.py
client/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
client/scripts/: generate-api-types.js
client/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
data/: test_state_1.csv  test_state_2-update_safety_stock.csv  test_state_3-add_material.csv
docs/: architecture.md  extending-permissions.md  notifications.md  permissions-ui.md
supabase/: config.toml  seed copy.sql  seed.sql
supabase/migrations/: 20251111034607_initialisation.sql  20251112000000_add_audit_logs.sql  20251114000000_add_completed_checklist.sql  20251117000000_add_checklist_audit.sql  20251118000000_fix_comments_add_audit.sql  20251127000000_add_insight_acknowledgement.sql  20251127100000_add_missing_indexes.sql  20251128000000_add_upload_jobs.sql  20251215050911_add_rbac.sql  (+14 more)
(+93 files in other folders)
